<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dicoding.core.com.dicoding.core.DetailActivity">

    <ImageView
        android:id="@+id/img_poster_banner"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/movie_poster" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail_poster"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="110dp"
        android:layout_marginStart="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/img_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/movie_poster" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/img_poster_banner"
        app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/movie_title" />

    <ImageView
        android:id="@+id/icon_star"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        android:contentDescription="@string/review"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintBottom_toTopOf="@id/table"
        app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_rating"/>

    <TextView
        android:id="@+id/tv_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/tools_rating"
        app:layout_constraintStart_toEndOf="@id/icon_star"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintEnd_toStartOf="@id/tv_rating_slash"/>

    <TextView
        android:id="@+id/tv_rating_slash"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/slash"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@id/tv_detail_rating"
        app:layout_constraintEnd_toStartOf="@id/tv_rating_count"/>

    <TextView
        android:id="@+id/tv_rating_count"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="255"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@id/tv_rating_slash"
        app:layout_constraintEnd_toStartOf="@id/tv_rating_user"/>

    <TextView
        android:id="@+id/tv_rating_user"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/review"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@id/tv_rating_count"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
        app:layout_constraintTop_toBottomOf="@id/icon_star"
        app:layout_constraintEnd_toEndOf="parent" >

    </TableLayout>

    <TextView
        android:id="@+id/tv_sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/cv_detail_poster"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_sinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sinopsis" />

    <TextView
        android:id="@+id/tv_detail_sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/sinopsis" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tambah_ke_favorit"
        android:tag="Not Saved"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.9"
        tools:text="@string/favorite_text" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>